--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".MainActivity"
+    tools:context=".Controler.MainActivity"
     tools:ignore="MergeRootFrame">
 
     <fr.castorflex.android.verticalviewpager.VerticalViewPager
