--- a/app/src/main/res/layout/fragment_smiley.xml
+++ b/app/src/main/res/layout/fragment_smiley.xml
@@ -38,7 +38,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@android:color/transparent"
-        android:src="@drawable/circular_chart"
+        android:src="@drawable/circular_chart3"
         />
 
 
