--- a/app/src/main/res/layout/activity_pie.xml
+++ b/app/src/main/res/layout/activity_pie.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_grey"
     tools:context=".Controler.PieActivity">
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/activity_pie_piechart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/light_sage"/>
+        android:layout_margin="30dp"/>
 
 </FrameLayout>
