--- a/app/src/main/res/layout/fragment_smiley.xml
+++ b/app/src/main/res/layout/fragment_smiley.xml
@@ -4,7 +4,7 @@
     android:id="@+id/fragment_page_rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/light_sage">
 
     <ImageButton
         android:id="@+id/fragment_main_smiley_image_view"
@@ -41,7 +41,6 @@
         android:src="@drawable/circular_chart3"
         />
 
-
     <ImageButton
         android:id="@+id/activity_main_history_btn"
         android:layout_width="wrap_content"
@@ -51,6 +50,5 @@
         android:layout_marginEnd="40dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_history_black" />
-
 
 </RelativeLayout>
